# nvidia-mesh-tools

./: BakerTool.md  CMakeLists.txt  ProjectHome.md  ReleaseNotes.html  VERSION  buildpkg  configure
cmake/: DetermineProcessor.cmake  FindCUDA.cmake  FindCg.cmake  FindDirectX.cmake  FindFreeImage.cmake  FindGLEW.cmake  FindGLUT.cmake  FindMaya.cmake  FindOpenEXR.cmake  OptimalOptions.cmake
src/: CMakeLists.txt  nvconfig.h.in
src/nvcore/: Algorithms.h  Array2D.cpp  Array2D.h  BitArray.h  CMakeLists.txt  Constraints.h  Containers.h  CpuInfo.cpp  CpuInfo.h  Debug.cpp  Debug.h  FileSystem.cpp  Prefetch.h  Ptr.h  Radix.cpp  Radix.h  Radix3.cpp  Radix3.h  RefCounted.cpp  RefCounted.h  StrLib.cpp  StrLib.h  TextReader.cpp  Timer.h  Tokenizer.cpp  nvcore.h  vsscanf_proxy_win64.masm
src/nvimage/: BlockDXT.cpp  BlockDXT.h  CMakeLists.txt  ColorBlock.cpp  ColorBlock.h  DirectDrawSurface.cpp  DirectDrawSurface.h  Filter.cpp  FloatImage.cpp  FloatImage.h  HoleFilling.cpp  HoleFilling.h  Image.cpp  ImageIO.cpp  ImageIO.h  NormalMipmap.cpp
src/nvimage/openexr/: AUTHORS  CMakeLists.txt  ChangeLog  README.OSX  README.cmake
src/nvimage/openexr/gnuwin32/: CMakeLists.txt
src/nvimage/openexr/gnuwin32/include/: zconf.h
src/nvimage/openexr/src/: CMakeLists.txt  IlmBaseConfig.in.h  OpenEXRConfig.in.h
src/nvimage/openexr/src/Half/: CMakeLists.txt
src/nvimage/openexr/src/HalfTest/: main.cpp  testArithmetic.cpp  testArithmetic.h  testBitPatterns.cpp  testBitPatterns.h  testClassification.cpp  testClassification.h  testError.cpp  testError.h  testFunction.cpp  testFunction.h  testLimits.cpp  testLimits.h  testSize.cpp  testSize.h
src/nvimage/openexr/src/Iex/: CMakeLists.txt  IexThrowErrnoExc.cpp
src/nvimage/openexr/src/IexTest/: main.cpp  testBaseExc.cpp  testBaseExc.h
src/nvimage/openexr/src/IlmImf/: CMakeLists.txt  ImfB44Compressor.cpp  ImfCRgbaFile.cpp  ImfConvert.cpp  ImfEnvmap.cpp  ImfHeader.cpp  ImfHuf.cpp  ImfInputFile.cpp  ImfLut.cpp  ImfMisc.cpp  ImfName.h  ImfOpaqueAttribute.cpp  ImfOutputFile.cpp  ImfPxr24Compressor.cpp  ImfRgbaYca.cpp  ImfScanLineInputFile.cpp  ImfStdIO.cpp  ImfTileOffsets.cpp  ImfTiledInputFile.cpp  ImfTiledOutputFile.cpp  ImfTimeCode.cpp
src/nvimage/openexr/src/IlmThread/: CMakeLists.txt  IlmThread.cpp  IlmThreadMutex.cpp  IlmThreadPool.cpp  IlmThreadSemaphore.cpp  IlmThreadSemaphoreWin32.cpp  IlmThreadWin32.cpp
src/nvimage/openexr/src/Imath/: CMakeLists.txt  ImathVec.cpp
src/nvimage/openexr/src/ImathTest/: main.cpp  testBoxAlgo.cpp  testBoxAlgo.h  testColor.cpp  testColor.h  testExtractEuler.cpp  testExtractEuler.h  testExtractSHRT.cpp  testExtractSHRT.h  testFrustum.cpp  testFrustum.h  testFun.cpp  testFun.h  testInvert.cpp  testInvert.h  testLineAlgo.cpp  testLineAlgo.h  testMatrix.cpp  testMatrix.h  testQuatSetRotation.cpp  testQuatSetRotation.h  testQuatSlerp.cpp  testQuatSlerp.h  testRandom.cpp  testRandom.h  testRoots.cpp  testRoots.h  testShear.cpp  testShear.h
src/nvmath/: Basis.cpp  Basis.h  Bezier.cpp  Bezier.h  Box.h  CMakeLists.txt  Fitting.cpp  Fitting.h  Frustum.cpp  Frustum.h  Half.cpp  Half.h  KahanSum.h  Matrix.h  Montecarlo.cpp  Montecarlo.h  Plane.h  Polygon.cpp  Polygon.h  Quaternion.h  Random.cpp  Random.h  Solver.cpp  Solver.h  Sparse.cpp  Sparse.h  SphericalHarmonic.cpp  SphericalHarmonic.h  TriBox.cpp  TypeSerialization.cpp  TypeSerialization.h  Vector.h
src/nvmath/lsqr/: lsqr.cpp  lsqr.h
src/nvmesh/: BaseMesh.cpp  BaseMesh.h  CMakeLists.txt  MeshAdjacency.cpp  MeshAdjacency.h  MeshBuilder.cpp  MeshBuilder.h  MeshSmoothGroup.h  MeshTopology.cpp  MeshTopology.h  PolyMesh.cpp  PolyMesh.h  QuadTriMesh.cpp  QuadTriMesh.h  TriMesh.cpp  TriMesh.h  VertexData.cpp  VertexData.h  nvmesh.h
src/nvmesh/animation/: Animation.cpp  Animation.h  Bone.h  CudaSkinning.cpp  CudaSkinning.h  MeshSkeleton.cpp  MeshSkeleton.h  MorphTarget.cpp  MorphTarget.h
src/nvmesh/export/: MeshExportOBJ.cpp  MeshExportOBJ.h
src/nvmesh/geometry/: Bounds.cpp  Bounds.h  CMakeLists.txt  MeshNormals.cpp  MeshNormals.h  MeshTransform.cpp  MeshTransform.h  TangentSpace.cpp  TangentSpace.h
src/nvmesh/halfedge/: HalfEdge.cpp  HalfEdge.h  HalfEdgeFace.cpp  HalfEdgeFace.h  HalfEdgeMesh.cpp  HalfEdgeMesh.h  HalfEdgeVertex.h
src/nvmesh/import/: ColladaFile.h  MD5File.h  MeshImport.cpp  MeshImport.h  MeshImportHeightMap.cpp  MeshImportHeightMap.h  MeshImportM.cpp  MeshImportM.h  MeshImportMD5.cpp  MeshImportMD5.h  MeshImportOBJ.cpp  MeshImportOBJ.h  MeshImportOFF.cpp  MeshImportOFF.h  MeshImportPLY.cpp  MeshImportPLY.h  MeshImportPSK.cpp  MeshImportPSK.h  MeshImportT3D.h  UnrealFile.cpp  UnrealFile.h  XFile.h
src/nvmesh/kdtree/: KDTree.cpp  KDTree.h  KDTreeBuilder.cpp  KDTreeBuilder.h  MeshKDTree.cpp  MeshKDTree.h
src/nvmesh/mender/: NVMeshMender.cpp  NVMeshMender.h
src/nvmesh/param/: Atlas.cpp  Atlas.h  LeastSquaresConformalMap.cpp  LeastSquaresConformalMap.h  NaturalParametrization.cpp  ParameterizationQuality.cpp  ParameterizationQuality.h  Parametrization.cpp  Seams.cpp  Seams.h  SingleFaceMap.cpp  SingleFaceMap.h
src/nvmesh/qms/: QuadSimplificationMesh.cpp  QuadSimplificationMesh.h
src/nvmesh/raster/: ClippedTriangle.h  Raster.cpp  Raster.h
src/nvmesh/raytracing/: FaceBuffer.cpp  FaceBuffer.h  Grid.cpp  Grid.h  Raytracing.h
src/nvmesh/render/: MeshOptimizer.cpp  MeshOptimizer.h  NvTriStrip.cpp  NvTriStrip.h  NvTriStripObjects.cpp  NvTriStripObjects.h  NvTriStripVertexCache.cpp  NvTriStripVertexCache.h  (+2 more)
src/nvmesh/test/: BoundaryTan.cpp  CMakeLists.txt  LimitMask.cpp  LimitTangent.cpp  MeshTest.cpp  RayTest.cpp
src/nvmesh/tools/baker/: AccBaseSurface.cpp  AccBaseSurface.h  Baker.cpp  BaseMeshPass.cpp  BaseMeshPass.h  BaseSurface.h  CMakeLists.txt  CmdOptions.h  DetailedMeshPass.cpp  DetailedMeshPass.h  GeometryImage.h  Samplers.cpp  Samplers.h  TiledTask.cpp  TiledTask.h  TriBaseSurface.cpp  TriBaseSurface.h
src/nvmesh/tools/maya/: CMakeLists.txt  MayaAnalyzer.cpp  MayaCommandLineExporter.cpp  MayaExportPlugin.cpp  MayaExporter.cpp  MayaExporter.h  MayaMeshBuilder.cpp  MayaMeshBuilder.h  MayaUtils.cpp  MayaUtils.h  NvMayaExportScript.mel
(+30 files in other folders)
