CMAKE_MINIMUM_REQUIRED(VERSION 2.4.0)
PROJECT (OpenEXR)
#ENABLE_TESTING()

IF(WIN32)
	IF(NOT GNUWIN32_PATH)
		SET(GNUWIN32_PATH "${OpenEXR_SOURCE_DIR}/gnuwin32")
		SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "${GNUWIN32_PATH}/include")
		SET(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} "${GNUWIN32_PATH}/lib")
	ENDIF(NOT GNUWIN32_PATH)
ENDIF(WIN32)

#SET(ILMBASE_SHARED)	# Set to true to create shared libraries.
#SET(OPENEXR_SHARED)	# Set to true to create shared libraries.


ADD_SUBDIRECTORY(src)
