
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

#ADD_EXECUTABLE(nvmeshtest MeshTest.cpp)
#TARGET_LINK_LIBRARIES(nvmeshtest ${LIBS} nvcore nvmath nvimage nvmesh)

# TODO - Add rules for ginac.
#ADD_EXECUTABLE(nvlimitmask LimitMask.cpp)
#TARGET_LINK_LIBRARIES(nvlimitmask ${LIBS} nvcore nvmath nvmesh ginac)

# TODO - Add rules for ginac.
#ADD_EXECUTABLE(nvboundarytan BoundaryTan.cpp)
#TARGET_LINK_LIBRARIES(nvboundarytan ${LIBS} nvcore nvmath nvmesh ginac)

#ADD_EXECUTABLE(nvlimittan LimitTangent.cpp)
#TARGET_LINK_LIBRARIES(nvlimittan ${LIBS} nvcore nvmath nvimage nvmesh)

#ADD_EXECUTABLE(nvraytest RayTest.cpp)
#TARGET_LINK_LIBRARIES(nvraytest ${LIBS} nvcore nvmath nvimage nvmesh)
