PROJECT (Half)

SET(HALF_SRCS
	half.cpp
	half.h
	halfFunction.h
	halfLimits.h)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

IF(ILMBASE_SHARED)
	ADD_LIBRARY(Half SHARED ${HALF_SRCS})
ELSE(ILMBASE_SHARED)
	ADD_LIBRARY(Half ${HALF_SRCS})
ENDIF(ILMBASE_SHARED)

#TARGET_LINK_LIBRARIES(Half ${LIBS})

INSTALL(TARGETS Half
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib/static)

INSTALL(FILES 
	half.h
	halfFunction.h
	halfLimits.h
	DESTINATION include/OpenEXR)